<resources>
    <string name="app_name">Club -HUB</string>
    <string name="image1">image1</string>
    <string name="good_morning">Good Morning</string>
    <string name="vicky">Vicky</string>
    <string name="newString">NEW</string>
    <string name="spectrum">Spectrum</string>
    <string name="spectrum_string">SPECTRUM</string>
    <string name="search">Search</string>
    <string name="search_company">Search Company</string>
    <string name="follow">FOLLOW</string>
    <string name="favourite">Favourite</string>
    <string name="members">Members</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
</resources>
