<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.MainActivity"
        android:background="@color/colorPrimaryDark">


    <TextView
            android:id="@+id/firstText"
            android:text="@string/newString"
            android:textSize="28sp"
            android:textAlignment="center"
            android:background="@drawable/background_image_home"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:fontFamily="@font/palanquin_dark"
            android:layout_width="match_parent"
            android:layout_height="@dimen/DP_100"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/image1"/>

    <TextView
            android:id="@+id/secondText"
            android:text="@string/spectrum_string"
            android:textSize="28sp"
            android:textAlignment="center"
            android:background="@drawable/background_image_home"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:fontFamily="@font/palanquin_dark"
            android:layout_width="match_parent"
            android:layout_height="@dimen/DP_100"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/firstText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"/>


    <TextView
            android:id="@+id/companyTitle"
            android:text="Companies"
            android:layout_width="match_parent"
            android:textColor="@color/textColor"
            android:layout_height="wrap_content"
            android:fontFamily="@font/palanquin_dark"
            android:textSize="24sp"
            android:layout_marginTop="24dp"
            android:paddingLeft="@dimen/DP_16"
            app:layout_constraintTop_toBottomOf="@+id/secondText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>


    <ImageView
            android:id="@+id/sortCompany"
            android:src="@drawable/ic_sort_by_alpha_black_24dp"
            android:layout_width="@dimen/DP_24"
            android:layout_height="@dimen/DP_24"
            app:layout_constraintEnd_toEndOf="@+id/companyTitle" android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/secondText"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/data_recycler"
            app:layout_constraintVertical_bias="0.619"/>


    <androidx.recyclerview.widget.RecyclerView
            android:background="@color/colorPrimaryDark"
            android:id="@+id/data_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/companyTitle"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>