<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.MemberListActivity"
        android:background="@color/colorPrimaryDark">

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/logoImage"
            android:layout_width="@dimen/DP_100"
            android:layout_height="@dimen/DP_100"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/companyNameText"
            tools:text="XIXAN"
            android:textColor="@color/textColor"
            android:fontFamily="@font/palanquin_dark"
            android:textSize="18sp"
            android:layout_width="403dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/logoImage"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center" app:layout_constraintEnd_toEndOf="parent"/>

    <Button

            android:background="@color/colorAccent"
            android:textColor="@color/textColor"
            android:id="@+id/followButton"
            android:text="@string/follow"
            android:layout_width="72dp"
            android:layout_height="40dp"
            android:layout_marginStart="84dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/companyNameText"/>

    <Button
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:id="@+id/favourite"
            android:background="@color/colorAccent"
            android:textColor="@color/textColor"
            android:text="@string/favourite"
            android:layout_marginEnd="72dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/companyNameText"/>

    <TextView
            tools:text="@tools:sample/lorem"
            android:id="@+id/descriptionText"
            android:fontFamily="@font/palanquin_dark"
            android:textSize="12sp"
            android:textColor="@color/textColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            app:layout_constraintTop_toBottomOf="@+id/companyNameText" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
            android:textAlignment="viewStart" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>

    <TextView
            android:drawableLeft="@drawable/ic_link_black_24dp"
            android:drawablePadding="5dp"
            tools:text="@tools:sample/first_names"
            android:fontFamily="@font/palanquin_dark"
            android:id="@+id/websiteText"
            android:textSize="12sp"
            android:textColor="@color/textColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/descriptionText" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>

    <TextView
            android:textSize="18sp"
            android:textColor="@color/textColor"
            android:fontFamily="@font/palanquin_dark"
            android:text="@string/members"
            android:id="@+id/membersTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/websiteText"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/memberRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/membersTitle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>